layout changes and certain additions

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -115,6 +115,11 @@
   background-color: blue;
 }
 
+/* Future Expenses */
+.futureExpenses{
+  display: grid;
+}
+
 /* sign up form */
 .signupForm {
   display: grid;
