--- a/client/src/styles/footer.css
+++ b/client/src/styles/footer.css
@@ -16,6 +16,11 @@
   font-size: 14px;
 }
 
+.footerContent span {
+  color: white;
+  font-weight: bold;
+}
+
 .footerRight {
-  opacity: 0.7;
+  opacity: 0.8;
 }
